@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -39,6 +39,7 @@ import org.thingsboard.server.common.data.id.EntityIdFactory;
 import org.thingsboard.server.common.data.id.HasId;
 import org.thingsboard.server.common.data.id.TenantId;
 import org.thingsboard.server.common.data.page.PageData;
+import org.thingsboard.server.common.data.page.PageDataIterable;
 import org.thingsboard.server.common.data.page.PageLink;
 import org.thingsboard.server.common.data.sync.ie.EntityExportData;
 import org.thingsboard.server.common.data.sync.ie.EntityExportSettings;
@@ -68,7 +69,7 @@ import org.thingsboard.server.common.data.util.ThrowingRunnable;
 import org.thingsboard.server.dao.DaoUtil;
 import org.thingsboard.server.dao.exception.DeviceCredentialsValidationException;
 import org.thingsboard.server.queue.util.TbCoreComponent;
-import org.thingsboard.server.service.entitiy.TbNotificationEntityService;
+import org.thingsboard.server.service.entitiy.TbLogEntityActionService;
 import org.thingsboard.server.service.executors.VersionControlExecutor;
 import org.thingsboard.server.service.sync.ie.EntitiesExportImportService;
 import org.thingsboard.server.service.sync.ie.exporting.ExportableEntitiesService;
@@ -89,10 +90,10 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static com.google.common.util.concurrent.Futures.transform;
 import static org.thingsboard.server.common.data.sync.vc.VcUtils.checkBranchName;
@@ -108,7 +109,7 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
     private final GitVersionControlQueueService gitServiceQueue;
     private final EntitiesExportImportService exportImportService;
     private final ExportableEntitiesService exportableEntitiesService;
-    private final TbNotificationEntityService entityNotificationService;
+    private final TbLogEntityActionService logEntityActionService;
     private final TransactionTemplate transactionTemplate;
     private final TbTransactionalCache<UUID, VersionControlTaskCacheEntry> taskCache;
     private final VersionControlExecutor executor;
@@ -162,13 +163,13 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
         var cacheEntry = taskCache.get(requestId);
         if (cacheEntry == null || cacheEntry.get() == null) {
             log.debug("[{}] No cache record: {}", requestId, cacheEntry);
-            throw new ThingsboardException(ThingsboardErrorCode.ITEM_NOT_FOUND);
+            throw new ThingsboardException("Task execution timed-out", ThingsboardErrorCode.ITEM_NOT_FOUND);
         } else {
             var entry = cacheEntry.get();
             log.trace("[{}] Cache get: {}", requestId, entry);
             var result = getter.apply(entry);
             if (result == null) {
-                throw new ThingsboardException(ThingsboardErrorCode.BAD_REQUEST_PARAMS);
+                throw new ThingsboardException("Invalid task", ThingsboardErrorCode.BAD_REQUEST_PARAMS);
             } else {
                 return result;
             }
@@ -246,16 +247,18 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
         switch (request.getType()) {
             case SINGLE_ENTITY: {
                 SingleEntityVersionLoadRequest versionLoadRequest = (SingleEntityVersionLoadRequest) request;
+                ctx.setRollbackOnError(true);
                 VersionLoadConfig config = versionLoadRequest.getConfig();
                 ListenableFuture<EntityExportData> future = gitServiceQueue.getEntity(user.getTenantId(), request.getVersionId(), versionLoadRequest.getExternalEntityId());
                 DonAsynchron.withCallback(future,
-                        entityData -> doInTemplate(ctx, request, c -> loadSingleEntity(c, config, entityData)),
+                        entityData -> load(ctx, request, c -> loadSingleEntity(c, config, entityData)),
                         e -> processLoadError(ctx, e), executor);
                 break;
             }
             case ENTITY_TYPE: {
                 EntityTypeVersionLoadRequest versionLoadRequest = (EntityTypeVersionLoadRequest) request;
-                executor.submit(() -> doInTemplate(ctx, request, c -> loadMultipleEntities(c, versionLoadRequest)));
+                ctx.setRollbackOnError(versionLoadRequest.isRollbackOnError());
+                executor.submit(() -> load(ctx, request, c -> loadMultipleEntities(c, versionLoadRequest)));
                 break;
             }
             default:
@@ -265,25 +268,30 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
         return ctx.getRequestId();
     }
 
-    private <R> VersionLoadResult doInTemplate(EntitiesImportCtx ctx, VersionLoadRequest request, Function<EntitiesImportCtx, VersionLoadResult> function) {
+    private <R> VersionLoadResult load(EntitiesImportCtx ctx, VersionLoadRequest request, Function<EntitiesImportCtx, VersionLoadResult> loadFunction) {
         try {
-            VersionLoadResult result = transactionTemplate.execute(status -> {
-                try {
-                    return function.apply(ctx);
-                } catch (RuntimeException e) {
-                    throw e;
-                } catch (Exception e) {
-                    throw new RuntimeException(e); // to prevent UndeclaredThrowableException
+            VersionLoadResult result;
+            if (ctx.isRollbackOnError()) {
+                result = transactionTemplate.execute(status -> {
+                    try {
+                        return loadFunction.apply(ctx);
+                    } catch (RuntimeException e) {
+                        throw e;
+                    } catch (Exception e) {
+                        throw new RuntimeException(e); // to prevent UndeclaredThrowableException
+                    }
+                });
+                for (ThrowingRunnable eventCallback : ctx.getEventCallbacks()) {
+                    eventCallback.run();
                 }
-            });
-            for (ThrowingRunnable throwingRunnable : ctx.getEventCallbacks()) {
-                throwingRunnable.run();
+            } else {
+                result = loadFunction.apply(ctx);
             }
             result.setDone(true);
             return cachePut(ctx.getRequestId(), result);
         } catch (LoadEntityException e) {
             return cachePut(ctx.getRequestId(), onError(e.getExternalId(), e.getCause()));
-        } catch (Exception e) {
+        } catch (Throwable e) {
             log.info("[{}] Failed to process request [{}] due to: ", ctx.getTenantId(), request, e);
             return cachePut(ctx.getRequestId(), VersionLoadResult.error(EntityLoadError.runtimeError(e)));
         }
@@ -295,6 +303,7 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
                     .updateRelations(config.isLoadRelations())
                     .saveAttributes(config.isLoadAttributes())
                     .saveCredentials(config.isLoadCredentials())
+                    .saveCalculatedFields(config.isLoadCalculatedFields())
                     .findExistingByName(false)
                     .build());
             ctx.setFinalImportAttempt(true);
@@ -318,13 +327,12 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
         var sw = TbStopWatch.create("before");
 
         List<EntityType> entityTypes = request.getEntityTypes().keySet().stream()
-                .sorted(exportImportService.getEntityTypeComparatorForImport()).collect(Collectors.toList());
+                .sorted(exportImportService.getEntityTypeComparatorForImport()).toList();
         for (EntityType entityType : entityTypes) {
             log.debug("[{}] Loading {} entities", ctx.getTenantId(), entityType);
             sw.startNew("Entities " + entityType.name());
             ctx.setSettings(getEntityImportSettings(request, entityType));
             importEntities(ctx, entityType);
-            persistToCache(ctx);
         }
 
         sw.startNew("Reimport");
@@ -336,7 +344,6 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
                 .filter(entityType -> request.getEntityTypes().get(entityType).isRemoveOtherEntities())
                 .sorted(exportImportService.getEntityTypeComparatorForImport().reversed())
                 .forEach(entityType -> removeOtherEntities(ctx, entityType));
-        persistToCache(ctx);
 
         sw.startNew("References and Relations");
         exportImportService.saveReferencesAndRelations(ctx);
@@ -355,6 +362,7 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
                 .updateRelations(config.isLoadRelations())
                 .saveAttributes(config.isLoadAttributes())
                 .saveCredentials(config.isLoadCredentials())
+                .saveCalculatedFields(config.isLoadCalculatedFields())
                 .findExistingByName(config.isFindExistingEntityByName())
                 .build();
     }
@@ -389,6 +397,8 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
                 ctx.getImportedEntities().computeIfAbsent(entityType, t -> new HashSet<>())
                         .add(importResult.getSavedEntity().getId());
             }
+
+            persistToCache(ctx);
             log.debug("Imported {} pack ({}) for tenant {}", entityType, entityDataList.size(), ctx.getTenantId());
             offset += limit;
         } while (entityDataList.size() == limit);
@@ -413,19 +423,34 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
     }
 
     private void removeOtherEntities(EntitiesImportCtx ctx, EntityType entityType) {
-        DaoUtil.processInBatches(pageLink -> {
-            return exportableEntitiesService.findEntitiesByTenantId(ctx.getTenantId(), entityType, pageLink);
-        }, 100, entity -> {
-            if (ctx.getImportedEntities().get(entityType) == null || !ctx.getImportedEntities().get(entityType).contains(entity.getId())) {
-                exportableEntitiesService.removeById(ctx.getTenantId(), entity.getId());
-
-                ctx.addEventCallback(() -> {
-                    entityNotificationService.logEntityAction(ctx.getTenantId(), entity.getId(), entity, null,
-                            ActionType.DELETED, ctx.getUser());
-                });
-                ctx.registerDeleted(entityType);
+        var entities = new PageDataIterable<>(link -> exportableEntitiesService.findEntitiesIdsByTenantId(ctx.getTenantId(), entityType, link), 100);
+        Set<EntityId> toRemove = new HashSet<>();
+        for (EntityId entityId : entities) {
+            if (ctx.getImportedEntities().get(entityType) == null || !ctx.getImportedEntities().get(entityType).contains(entityId)) {
+                toRemove.add(entityId);
             }
-        });
+        }
+
+        for (EntityId entityId : toRemove) {
+            ExportableEntity<EntityId> entity = exportableEntitiesService.findEntityById(entityId);
+            exportableEntitiesService.removeById(ctx.getTenantId(), entityId);
+
+            ThrowingRunnable callback = () -> {
+                logEntityActionService.logEntityAction(ctx.getTenantId(), entity.getId(), entity, null,
+                        ActionType.DELETED, ctx.getUser());
+            };
+            if (ctx.isRollbackOnError()) {
+                ctx.addEventCallback(callback);
+            } else {
+                try {
+                    callback.run();
+                } catch (ThingsboardException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+            ctx.registerDeleted(entityType);
+        }
+        persistToCache(ctx);
     }
 
     private VersionLoadResult onError(EntityId externalId, Throwable e) {
@@ -447,7 +472,7 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
     }
 
     @Override
-    public ListenableFuture<EntityDataDiff> compareEntityDataToVersion(User user, EntityId entityId, String versionId) throws Exception {
+    public ListenableFuture<EntityDataDiff> compareEntityDataToVersion(User user, EntityId entityId, String versionId) {
         HasId<EntityId> entity = exportableEntitiesService.findEntityByTenantIdAndId(user.getTenantId(), entityId);
         if (!(entity instanceof ExportableEntity)) throw new IllegalArgumentException("Unsupported entity type");
 
@@ -460,6 +485,7 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
                             .exportRelations(otherVersion.hasRelations())
                             .exportAttributes(otherVersion.hasAttributes())
                             .exportCredentials(otherVersion.hasCredentials())
+                            .exportCalculatedFields(otherVersion.hasCalculatedFields())
                             .build());
                     EntityExportData<?> currentVersion;
                     try {
@@ -474,12 +500,11 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
     @Override
     public ListenableFuture<EntityDataInfo> getEntityDataInfo(User user, EntityId entityId, String versionId) {
         return Futures.transform(gitServiceQueue.getEntity(user.getTenantId(), versionId, entityId),
-                entity -> new EntityDataInfo(entity.hasRelations(), entity.hasAttributes(), entity.hasCredentials()), MoreExecutors.directExecutor());
+                entity -> new EntityDataInfo(entity.hasRelations(), entity.hasAttributes(), entity.hasCredentials(), entity.hasCalculatedFields()), MoreExecutors.directExecutor());
     }
 
-
     @Override
-    public ListenableFuture<List<BranchInfo>> listBranches(TenantId tenantId) throws Exception {
+    public ListenableFuture<List<BranchInfo>> listBranches(TenantId tenantId) {
         return gitServiceQueue.listBranches(tenantId);
     }
 
@@ -502,12 +527,10 @@ public class DefaultEntitiesVersionControlService implements EntitiesVersionCont
     }
 
     @Override
-    public ListenableFuture<Void> deleteVersionControlSettings(TenantId tenantId) throws Exception {
-        if (repositorySettingsService.delete(tenantId)) {
-            return gitServiceQueue.clearRepository(tenantId);
-        } else {
-            return Futures.immediateFuture(null);
-        }
+    public ListenableFuture<Void> deleteVersionControlSettings(TenantId tenantId) {
+        log.debug("[{}] Deleting version control settings", tenantId);
+        repositorySettingsService.delete(tenantId);
+        return gitServiceQueue.clearRepository(tenantId);
     }
 
     @Override
